k8s-resources/ctfd/deployment-ctfd-mysql-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ctfd
  labels:
    ctfd: mysql
    app: ctfd-mysql-db
  name: ctfd-mysql-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ctfd-mysql-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        ctfd: mysql
        app: ctfd-mysql-db
    spec:
      containers:
      - args:
        - mysqld
        - --character-set-server=utf8mb4
        - --collation-server=utf8mb4_unicode_ci
        - --wait_timeout=28800
        - --log-warnings=0
        image: mariadb:10.4.12
        imagePullPolicy: IfNotPresent
        name: ctfd-mysql-db
        resources:
          limits:
            cpu: 100m
            memory: 512Mi
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: ctfd-mysql-db-pv
      restartPolicy: Always
      serviceAccountName: ""
      automountServiceAccountToken: false
      volumes:
      - name: ctfd-mysql-db-pv
        persistentVolumeClaim:
          claimName: ctfd-mysql-db-pv
